--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.39.1",
     "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.5.4",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
