--- a/node/package.json
+++ b/node/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.7.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.5.4",
     "twilio": "^3.83.2"
   }
 }
